# PanEx

./: CLAUDE.md  Cargo.toml  README.md  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy-site.yml  release-tui.yml  release.yml
crates/panex-core/: Cargo.toml
crates/panex-core/src/: config.rs  lib.rs
crates/panex-tui/: Cargo.toml  README.md
crates/panex-tui/src/: app.rs  input.rs  layout.rs  main.rs  sort.rs  ui.rs
docs/: file-operations.md  ui.md  web-version.md
site/: devto-post.md  index.html
src/: context-menu.ts  file-system-access.d.ts  fs.ts  index.html  layout.ts  licensing.ts  main.ts  pane.ts  style.css  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  fs_ops.rs  lib.rs  main.rs
