[package]
name = "pane-explorer"
version = "0.1.0"
description = "A multi-pane file explorer"
authors = []
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pane_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
log = "0.4"
tauri-plugin-log = "2"
dirs = "6"
