[package]
name = "panex-core"
version = "0.4.0"
description = "Shared filesystem operations for PanEx"
edition = "2021"
license = "MIT"
repository = "https://github.com/Ivapo/PanEx"
homepage = "https://github.com/Ivapo/PanEx"
keywords = ["file-explorer", "file-manager", "tui"]
categories = ["filesystem"]

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
trash = "5"
dirs = "6"
