[package]
name = "panex-tui"
version = "0.1.4"
description = "Terminal UI for PanEx file explorer"
edition = "2021"
license = "MIT"
repository = "https://github.com/Ivapo/PanEx"
homepage = "https://github.com/Ivapo/PanEx"
keywords = ["file-explorer", "file-manager", "tui", "terminal"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[[bin]]
name = "panex"
path = "src/main.rs"

[dependencies]
panex-core = { version = "0.3.2", path = "../panex-core" }
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"
unicode-width = "0.2"
